syntax = "proto3";

package rivet.backend.pkg.cluster.datacenter_list;

import "proto/common.proto";
import "proto/backend/cluster.proto";

message Request {
	repeated rivet.common.Uuid cluster_ids = 1;
}

message Response {
	message Cluster {
		rivet.common.Uuid cluster_id = 1;
		repeated rivet.common.Uuid datacenter_ids = 2;
	}

	repeated Cluster clusters = 1;
}
